@@ -1,5 +1,5 @@
 /***************************************************************************
- *   Copyright (C) 2011-2012 by Walter Brisken                             *
+ *   Copyright (C) 2011-2017 by Walter Brisken                             *
  *                                                                         *
  *   This program is free software; you can redistribute it and/or modify  *
  *   it under the terms of the GNU General Public License as published by  *
@@ -51,8 +51,8 @@
 
 const char program[] = "fileto5c";
 const char author[]  = "Walter Brisken";
-const char version[] = "0.5";
-const char verdate[] = "20130826";
+const char version[] = "0.6";
+const char verdate[] = "20170520";
 
 const int defaultStatsRange[] = { 75000, 150000, 300000, 600000, 1200000, 2400000, 4800000, -1 };
 const unsigned int defaultChunkSizeMB = 20;
@@ -61,9 +61,9 @@ const int MaxLabelLength = 40;
 const int Mark5BFrameSize = 10016;
 const UINT32 Mark5BSyncWord = 0xABADDEED;
 
-typedef void (*sighandler_t)(int);
-sighandler_t oldsiginthand;
-int die = 0;
+struct sigaction old_sigint_action;
+
+volatile int die = 0;
 
 #define N_BANK			2
 
@@ -99,7 +99,7 @@ static void usage(const char *pgm)
 void siginthand(int j)
 {
 	die = 2;
-	signal(SIGINT, oldsiginthand);
+	sigaction(SIGINT, &old_sigint_action, 0);
 }
 
 static void filename2label(char *label, const char *filename)
@@ -926,6 +926,7 @@ int main(int argc, char **argv)
 	const char *filename = 0;
 	char label[MaxLabelLength] = "";
 	int statsRange[XLR_MAXBINS];
+	struct sigaction new_sigint_action;
 
 	memset((char *)(&mk5status), 0, sizeof(mk5status));
 
@@ -1098,7 +1099,10 @@ int main(int argc, char **argv)
 
 	v = lockMark5(3);
 
-	oldsiginthand = signal(SIGINT, siginthand);
+	new_sigint_action.sa_handler = siginthand;
+	sigemptyset(&new_sigint_action.sa_mask);
+	new_sigint_action.sa_flags = 0;
+	sigaction(SIGINT, &new_sigint_action, &old_sigint_action);
 
 	if(v < 0)
 	{
